[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Maps/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Buttons/button_rectangle_depth_gradient.png" type="Texture" id=2]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=3]
[ext_resource path="res://Assets/Towers/towerDefense_tile251.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/fast-forward.png" type="Texture" id=10]
[ext_resource path="res://Assets/Icons/dollar.png" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/heart.png" type="Texture" id=12]
[ext_resource path="res://Resources/Fonts/kfn_40_o1.tres" type="DynamicFont" id=13]

[node name="GameScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 100.0
rect_min_size = Vector2( 100, 400 )
custom_constants/separation = 10

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 3 )
expand = true

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 90.0
margin_right = 90.0
margin_bottom = 170.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Missile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 4 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="play_paused" type="TextureButton" parent="UI/HUD/HBoxContainer"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="X2" type="TextureButton" parent="UI/HUD/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 841.0
margin_top = 17.0
margin_right = 1132.0
margin_bottom = 69.0

[node name="TextureRect" type="TextureRect" parent="UI/HBoxContainer"]
margin_right = 50.0
margin_bottom = 52.0
texture = ExtResource( 12 )

[node name="Heart" type="Label" parent="UI/HBoxContainer"]
margin_left = 54.0
margin_top = 3.0
margin_right = 128.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 13 )
text = "100"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="UI/HBoxContainer"]
margin_left = 132.0
margin_right = 182.0
margin_bottom = 52.0
texture = ExtResource( 11 )

[node name="Money" type="Label" parent="UI/HBoxContainer"]
margin_left = 186.0
margin_top = 3.0
margin_right = 186.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 13 )
align = 1
valign = 1

[connection signal="button_down" from="UI/HUD/HBoxContainer/play_paused" to="." method="_on_play_paused_button_down"]
[connection signal="pressed" from="UI/HUD/HBoxContainer/play_paused" to="." method="_on_play_paused_pressed"]
[connection signal="button_down" from="UI/HUD/HBoxContainer/X2" to="." method="_on_X2_button_down"]
